tests/algorithms/x/Python/machine_learning/support_vector_machines.out
File "/workspace/mochi/tests/algorithms/x/Python/machine_learning/support_vector_machines.py", line 43
    return SVC(weights=[], bias=0.0, lr=lr, lambda=lambda_, epochs=epochs)
                                            ^^^^^^
SyntaxError: invalid syntax